// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentRequestSummaryNotification renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 10,
        "width": "100%",
      },
      Object {
        "borderColor": "#EEEEEE",
        "borderRadius": 3,
        "borderWidth": 1,
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "paddingRight": 10,
      }
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../src/images/send-dollar.png",
        }
      }
      style={
        Object {
          "height": 30,
          "width": 30,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-Bold",
          "fontSize": 14,
          "lineHeight": 18,
        }
      }
    >
      paymentRequestWithCount
    </Text>
    <View>
      <View
        style={
          Object {
            "justifyContent": "space-between",
            "minHeight": 70,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "marginTop": 5,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Text
              ellipsizeMode="middle"
              numberOfLines={1}
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    },
                  ]
                }
              >
                +491522345678
                 - 
                Dinner for me and the gals, PIZZAA!
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    },
                    Object {
                      "fontFamily": "Hind-SemiBold",
                    },
                  ]
                }
              >
                 
                200,000.00
              </Text>
            </Text>
            <Text
              ellipsizeMode="middle"
              numberOfLines={1}
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    },
                  ]
                }
              >
                +491522345678
                 - 
                My Birthday Present. :) Am I not the best? Celebration. Bam!
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    },
                    Object {
                      "fontFamily": "Hind-SemiBold",
                    },
                  ]
                }
              >
                 
                180.89
              </Text>
            </Text>
          </View>
          <View
            style={
              Object {
                "justifyContent": "flex-end",
                "paddingLeft": 10,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#81868B",
                    "fontFamily": "Hind-SemiBold",
                    "fontSize": 13,
                    "lineHeight": 17,
                  },
                  Object {
                    "color": "#42D689",
                  },
                ]
              }
            >
              +
              1
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "marginTop": 15,
            }
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 14,
                    "lineHeight": 18,
                  },
                  Object {
                    "color": "#42D689",
                    "fontFamily": "Hind-Medium",
                    "fontSize": 14,
                    "lineHeight": 18,
                  },
                  Object {
                    "paddingEnd": 15,
                  },
                ]
              }
            >
              review
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`PaymentRequestSummaryNotification when more 1 requests renders just it alone 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 10,
        "width": "100%",
      },
      Object {
        "borderColor": "#EEEEEE",
        "borderRadius": 3,
        "borderWidth": 1,
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "paddingRight": 10,
      }
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../src/images/send-dollar.png",
        }
      }
      style={
        Object {
          "height": 30,
          "width": 30,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-Bold",
          "fontSize": 14,
          "lineHeight": 18,
        }
      }
    >
      paymentRequest
    </Text>
    <View>
      <View
        style={
          Object {
            "justifyContent": "space-between",
            "minHeight": 70,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "marginTop": 5,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Text
              ellipsizeMode="middle"
              numberOfLines={1}
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    },
                  ]
                }
              >
                +491522345678
                 - 
                Dinner for me and the gals, PIZZAA!
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    },
                    Object {
                      "fontFamily": "Hind-SemiBold",
                    },
                  ]
                }
              >
                 
                200,000.00
              </Text>
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "marginTop": 15,
            }
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 14,
                    "lineHeight": 18,
                  },
                  Object {
                    "color": "#42D689",
                    "fontFamily": "Hind-Medium",
                    "fontSize": 14,
                    "lineHeight": 18,
                  },
                  Object {
                    "paddingEnd": 15,
                  },
                ]
              }
            >
              review
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`PaymentRequestSummaryNotification when more than 2 requests renders just two 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 10,
        "width": "100%",
      },
      Object {
        "borderColor": "#EEEEEE",
        "borderRadius": 3,
        "borderWidth": 1,
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "paddingRight": 10,
      }
    }
  >
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../src/images/send-dollar.png",
        }
      }
      style={
        Object {
          "height": 30,
          "width": 30,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#2E3338",
          "fontFamily": "Hind-Bold",
          "fontSize": 14,
          "lineHeight": 18,
        }
      }
    >
      paymentRequestWithCount
    </Text>
    <View>
      <View
        style={
          Object {
            "justifyContent": "space-between",
            "minHeight": 70,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "marginTop": 5,
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <Text
              ellipsizeMode="middle"
              numberOfLines={1}
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    },
                  ]
                }
              >
                +491522345678
                 - 
                Dinner for me and the gals, PIZZAA!
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    },
                    Object {
                      "fontFamily": "Hind-SemiBold",
                    },
                  ]
                }
              >
                 
                200,000.00
              </Text>
            </Text>
            <Text
              ellipsizeMode="middle"
              numberOfLines={1}
              style={
                Object {
                  "flexDirection": "row",
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    },
                  ]
                }
              >
                +491522345678
                 - 
                My Birthday Present. :) Am I not the best? Celebration. Bam!
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#81868B",
                      "fontFamily": "Hind-Regular",
                      "fontSize": 14,
                      "lineHeight": 20,
                    },
                    Object {
                      "fontFamily": "Hind-SemiBold",
                    },
                  ]
                }
              >
                 
                180.89
              </Text>
            </Text>
          </View>
          <View
            style={
              Object {
                "justifyContent": "flex-end",
                "paddingLeft": 10,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#81868B",
                    "fontFamily": "Hind-SemiBold",
                    "fontSize": 13,
                    "lineHeight": 17,
                  },
                  Object {
                    "color": "#42D689",
                  },
                ]
              }
            >
              +
              1
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "marginTop": 15,
            }
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Hind-Regular",
                    "fontSize": 14,
                    "lineHeight": 18,
                  },
                  Object {
                    "color": "#42D689",
                    "fontFamily": "Hind-Medium",
                    "fontSize": 14,
                    "lineHeight": 18,
                  },
                  Object {
                    "paddingEnd": 15,
                  },
                ]
              }
            >
              review
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
